@@ -1,3 +1,7 @@
+Sun May  7 23:46:04 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
+
+ - newhidups: added some non-standard usage codes to Tripplite subdriver
+
 Sat May  6 14:48:24 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>
 
  - newhidups: added string conversions to Tripplite subdriver
